An attempt to fix italics in selects on Safari

--- a/application/css/core.css.scss
+++ b/application/css/core.css.scss
@@ -98,6 +98,9 @@ img.missing {
 				font-weight: normal;
 				font-style: italic;
 				max-width: 80px;
+				optgroup, optgroup option {
+					font-style: normal !important;
+				}
 			}
 			a {
 				@include box-sizing;
